# placeholder-images

./: .env  Cargo.toml  Makefile  docker-compose.yaml  docker.yaml
migrations/: 20230808115703_image.sql  20240602091158_image.sql  image.sql  imageupdate.sql
queries/: create-images.sql
src/: main.rs
src-fe/: package.json  tailwind.config.js
src/app/: config.rs
src/handlers/: home.rs  image.rs  mod.rs
src/models/: image.rs
src/routes/: mod.rs
src/services/: image.rs
src/types/: mod.rs
templates/: createPost.html  detail.html  home.handlebars  home.html  home.mustache  layout.html  postItem.html
templates/partials/: head.mustache  layout.mustache  postItem.handlebars  postItem.mustache
