[package]
name = "mock-image-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web="4"
env_logger = "0.10.0"
log = "0.4.20"
serde = "1.0.183"
# tokio (no TLS)
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
ramhorns = "0.14.0"
