[package]
name = "mock-image-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web="4"
env_logger = "0.10.0"
log = "0.4.20"
serde = "1.0.183"
# tokio (no TLS)
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
ramhorns = "1.0.0"
askama_actix = "0.14.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
actix-files = "0.6.5"
fast_image_resize = { version = "4.0.0", features = ["image"] }
image = "0.25.1"
uuid = { version = "1.8.0", features = ["v4"] }
